--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "js-logger": "^1.6.1",
     "prop-types": "^15.8.1",
     "rambda": "^7.3.0",
+    "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.3.0",
